@@ -271,7 +271,7 @@ public class MusicServiceImpl extends ServiceImpl<MusicMapper, Music>
                 ZSetOperations<String, Object> zSetOps = redisUtil.zSet();
                 zSetOps.add("audio:topSongsByPlaycount", filename, (Integer) redisUtil.get("audio:playcountByWeekByMusicId:" + music_id));
 
-                return Arrays.toString(Files.readAllBytes(audioFilePath));
+                return Arrays.toString(inputStream.readAllBytes());
             } else {
                 System.out.println("File does not exist.");
             }
